xrpl-wasm-stdlib/xrpl-macros/tests/blob/fail_odd_length.stderr
error: Invalid blob hex: ABC
 --> tests/blob/fail_odd_length.rs:5:11
  |
5 |     blob!("ABC");
  |           ^^^^^
