xrpl-wasm-stdlib/xrpl-macros/tests/blob/fail_odd_length.rs
use xrpl_macros::blob;

// Hex must come in whole bytes — odd character counts must be rejected.
fn main() {
    blob!("ABC");
}
